# m1-typecheck

./: .stylua.toml  AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deps-refresh.yml  release.yml
assets/: m1-intrinsics.json  merge-help-captures.py
docs/: OBJECTS.md
editors/nvim/: README.md
lua/m1_typecheck/: init.lua
plugin/: m1_typecheck.lua
src/: ambiguous.rs  audit.rs  classname.rs  cross_script.rs  decode.rs  diagnostics.rs  expand.rs  filter.rs  flow.rs  in_out_io.rs  intrinsics.rs  invalid_value.rs  lib.rs  main.rs  output.rs  parsed.rs  project.rs  resolve.rs  schedule.rs  typer.rs  types.rs  unit_table.rs  units.rs
src/rules/: mod.rs  t001_unresolved.rs  t002_float_eq.rs  t003_int_float_mix.rs  t004_signed_unsigned_cmp.rs  t005_modulo_on_float.rs  t006_bitwise_on_float.rs  t010_local_prefix.rs  t011_prefix_mismatch.rs  t020_enum_member.rs  t021_enum_numeric_cmp.rs  t030_assign_mismatch.rs  t042_dbc_signal_range.rs  t060_stateful_conditional.rs  t061_integrated_only.rs  t062_deprecated_overload.rs  t063_calibration_only.rs  t064_arg_count.rs  t070_when_exhaustive.rs  t083_static_local_init.rs  t084_expand_bounds.rs  t085_user_arg_mismatch.rs  t086_unit_mismatch.rs  t091_local_case.rs  t105_local_use_before_def.rs  (+1 more)
tests/: audit.rs  big_semantics.rs  cfg_root_prefix.rs  cli_autoconfig.rs  cli_encoding.rs  cli_explain.rs  cli_flags.rs  cli_sarif.rs  corpus.rs  cross_script.rs  dbc_range.rs  enums.rs  expand_resolve.rs  flow.rs  in_out_io.rs  intrinsic_coverage.rs  invalid_value_gate.rs  local_case.rs  nan_to_integer.rs  project.rs  resolve.rs  resolve_rule.rs  rules.rs  rules_v2.rs  symbols.rs  t106_group_value.rs  typer.rs  typer_enum.rs
tools/: gen_unit_table.py
(+28 files in other folders)
