[package]
name = "m1-typecheck"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Symbol model and type checker for the MoTeC M1 script language"
publish = false

[[bin]]
name = "m1-typecheck"
path = "src/main.rs"

[lib]
name = "m1_typecheck"
path = "src/lib.rs"

[dependencies]
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", branch = "main" }
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
