[package]
name = "m1-typecheck"
version = "0.22.0"
edition = "2024"
default-run = "m1-typecheck"
license = "GPL-3.0-or-later"
description = "Symbol model and type checker for the MoTeC M1 script language"
publish = false

[[bin]]
name = "m1-typecheck"
path = "src/main.rs"

[[bin]]
name = "m1-cfg-export"
path = "src/bin/m1-cfg-export.rs"

[lib]
name = "m1_typecheck"
path = "src/lib.rs"

[dependencies]
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", tag = "v0.6.0" }
m1-workspace = { git = "https://github.com/nedlane/m1-workspace.git", tag = "v0.4.1" }
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
clap = { version = "4", features = ["derive"] }
